Fix overlap of text on desktop for Package Design section

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -425,9 +425,9 @@ button,
 
 #home article > #section-11 img {
   width: 100%;
-  top: 0;
+  top: 50%;
   right: 50%;
-  transform: translateX(50%);
+  transform: translate(50%, -50%);
 
   @media only screen and (min-width: $iPadMiniPortrait) {
     width: 92%;
